# learning-wasmcloud

./: .gitignore  README.md  deploy.zsh  down.zsh  host_config.json  issues.md  setenv  up.zsh
buy/: Cargo.toml  Makefile  README.md  wasmcloud.toml
buy/src/: lib.rs
fakepay-provider/: Cargo.toml  Makefile
fakepay-provider/src/: main.rs
hello/: Cargo.toml
hello.bak/src/: lib.rs
hello/src/: lib.rs
orders/: Makefile  codegen.toml  orders.smithy
orders/rust/: Cargo.toml
orders/rust/src/: lib.rs  orders.rs
payments/: payments.smithy
payments/rust/: Cargo.toml
payments/rust/src/: payments.rs
