[package]
name = "buy"
version = "0.1.2"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "buy"

[dependencies]
futures = "0.3"
# form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
# wasmcloud-interface-httpserver = "0.8"
orders = { path = "../orders/rust/" }
wasmcloud-examples-payments = { path = "../payments/rust/" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
